--- a/3. Functions and Operations/Quiz 3/Quiz.scss
+++ b/3. Functions and Operations/Quiz 3/Quiz.scss
@@ -1,1 +1,19 @@
+/*
+Q. Which of the following is a characteristic of color computation in SCSS?
+A. You can conduct arithmetic on all colors, but it will be computed piece-wise by every 2 digits.
+*/
 
+/*
+Q. In which of the following scenarios is “/“ not acting as division, but as a separator?
+A. font-size: 12px/14px;
+*/
+
+/*
+Q. What is the benefit of using a color function to change opacity of a color?
+A. You can isolate the transparency of a single component of the element.
+*/
+
+/*
+Q. Which of the following is incorrect loop syntax?
+A. All are valid
+*/
